small edit to fix spacing in flexbox

--- a/DotNetProject_Team5_Armoire/wwwroot/css/site.css
+++ b/DotNetProject_Team5_Armoire/wwwroot/css/site.css
@@ -128,6 +128,7 @@ a {
 }
 .add-item-flex-container {
     display: flex;
+    justify-content: space-evenly;
 }
 .image-container {
     padding-top: 100px;
